Changelog
=========

Changes in Flask-Restless-NG
============================

Version 2.2.4
-------------
- Do not log exceptions for user related errors (bad query, etc)
- Update safe check for `selectinload` for `includes
- Update SQLAlchemy dependency to 1.3.6+


Version 2.2.3
-------------
- Add safe check for `selectinload` for `includes`


Version 2.2.2
-------------
- Fix an incorrect selectinload query for models with custom select queries


Version 2.2.1
-------------
- Minor improvements and fixes


Version 2.2.0
-------------
- Serialize To-One relationships using foreign key, instead of trying to fetch the whole
relationship object from the database


Version 2.1.1
-------------
- Only fetch primary keys from a database for relationships when no filtering is required


Version 2.1.0
-------------
- Re-added FunctionsAPI until the next major release to let users to implement an alternative #23


Version 2.0.3
--------------
- Fix: #26 - selectinload is broken for models that have primary keys other than 'id'. Disabled until a new schema is
             implemented
- Make 'primary_key' optional again #25 (by @tanj)


Version 2.0.2
--------------
- Fixed import for SQLAlchemy 1.3 #22


Version 2.0.0
--------------

Refactored fetching resource collections:
- SQL query optimizations for 'include' and 'relationship' objects, using `selectinload`
  (3x-5x performance improvement when tested on large datasets)

- New parameter 'include_links' which controls should relationship objects include links. They are not required by
  JSON API, and disabling them significantly improves performance

- New interfaces for Serializer and Deserializer classes.

- APIManager requires Serializer/Deserializer objects instead of functions for `serializer`/`deserializer` options

Deprecations:
- 'single' parameter is no longer supported - makes code complicated, is not defined in JSON API specs and can be easily
  replicated on a client side
